--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,22 @@
   from = "/*"
   to = "/page-not-found.html"
   status = 404
+
+[[redirects]]
+   from = "/*"
+  to = "/index.html"
+  status = 301
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+  X-Frame-Options = "DENY"
+ X-XSS-Protection = "1; mode=block"
+
+
+ [[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+
